# C-OpenGL

./: build.sh  meson.build  readme.md
include/: color.h  opengl.h  shader.h
include/glad/: glad.h
shaders/: basic.frag  basic.vert  triangle.frag  triangle.vert
src/: color.c  glad.c  main.c  shader.c
